--- a/.gitignore
+++ b/.gitignore
@@ -13,10 +13,6 @@
 # testing
 /coverage
 
-# next.js
-/.next/
-/out/
-
 # production
 /build
 
@@ -38,4 +34,8 @@ yarn-error.log*
 
 # typescript
 *.tsbuildinfo
-next-env.d.ts
+
+# tanstack start
+.output/
+.tanstack/
+.nitro/
