--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "start": "node .output/server/index.mjs"
   },
   "dependencies": {
+    "@convex-dev/react-query": "^0.0.0-alpha.11",
     "@dnd-kit/core": "^6.3.1",
     "@dnd-kit/modifiers": "^9.0.0",
     "@dnd-kit/sortable": "^10.0.0",
@@ -24,11 +25,14 @@
     "@radix-ui/react-toggle": "^1.1.9",
     "@radix-ui/react-toggle-group": "^1.1.10",
     "@radix-ui/react-tooltip": "^1.2.7",
+    "@tanstack/react-query": "^5.81.5",
     "@tanstack/react-router": "^1.122.0",
+    "@tanstack/react-router-with-query": "^1.123.2",
     "@tanstack/react-start": "^1.122.1",
     "@tanstack/react-table": "^8.21.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "convex": "^1.25.2",
     "lucide-react": "^0.525.0",
     "next-themes": "^0.4.6",
     "postcss": "^8.5.6",
