--- a/package.json
+++ b/package.json
@@ -4,6 +4,9 @@
   "private": true,
   "type": "module",
   "scripts": {
+    "dev:all": "npm-run-all --parallel dev:*",
+    "dev:frontend": "vite dev",
+    "dev:backend": "convex dev --tail-logs",
     "dev": "vite dev",
     "build": "vite build",
     "start": "node .output/server/index.mjs"
@@ -13,18 +16,7 @@
     "@dnd-kit/core": "^6.3.1",
     "@dnd-kit/modifiers": "^9.0.0",
     "@dnd-kit/sortable": "^10.0.0",
-    "@radix-ui/react-avatar": "^1.1.10",
-    "@radix-ui/react-checkbox": "^1.3.2",
-    "@radix-ui/react-dialog": "^1.1.14",
-    "@radix-ui/react-dropdown-menu": "^2.1.15",
-    "@radix-ui/react-label": "^2.1.7",
-    "@radix-ui/react-select": "^2.2.5",
-    "@radix-ui/react-separator": "^1.1.7",
-    "@radix-ui/react-slot": "^1.2.3",
-    "@radix-ui/react-tabs": "^1.1.12",
-    "@radix-ui/react-toggle": "^1.1.9",
-    "@radix-ui/react-toggle-group": "^1.1.10",
-    "@radix-ui/react-tooltip": "^1.2.7",
+    "@t3-oss/env-core": "^0.13.8",
     "@tanstack/react-query": "^5.81.5",
     "@tanstack/react-router": "^1.122.0",
     "@tanstack/react-router-with-query": "^1.123.2",
@@ -35,7 +27,9 @@
     "convex": "^1.25.2",
     "lucide-react": "^0.525.0",
     "next-themes": "^0.4.6",
+    "npm-run-all": "^4.1.5",
     "postcss": "^8.5.6",
+    "radix-ui": "^1.4.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "recharts": "^2.15.4",
