add user authentication

--- a/.env.example
+++ b/.env.example
@@ -6,3 +6,7 @@ VITE_CONVEX_URL=
 VITE_OPENAI_API_KEY=
 VITE_OPENAI_BASE_URL=
 
+# Get your Google OAuth credentials here: https://console.cloud.google.com/apis/credentials
+GOOGLE_CLIENT_ID=
+GOOGLE_CLIENT_SECRET=
+
