--- a/package.json
+++ b/package.json
@@ -21,20 +21,22 @@
 		"@hookform/resolvers": "^5.1.1",
 		"@openai/agents": "^0.0.10",
 		"@radix-ui/react-accordion": "^1.2.11",
+		"@radix-ui/react-checkbox": "^1.3.2",
 		"@radix-ui/react-collapsible": "^1.1.11",
 		"@radix-ui/react-dialog": "^1.1.14",
 		"@radix-ui/react-label": "^2.1.7",
 		"@radix-ui/react-navigation-menu": "^1.2.13",
 		"@radix-ui/react-popover": "^1.1.14",
+		"@radix-ui/react-progress": "^1.1.7",
 		"@radix-ui/react-scroll-area": "^1.2.9",
 		"@radix-ui/react-slider": "^1.3.5",
 		"@radix-ui/react-slot": "^1.2.3",
 		"@radix-ui/react-switch": "^1.2.5",
 		"@t3-oss/env-core": "^0.13.8",
-		"@tanstack/react-query": "^5.81.5",
-		"@tanstack/react-router": "^1.125.4",
-		"@tanstack/react-router-with-query": "^1.125.4",
-		"@tanstack/react-start": "^1.125.4",
+		"@tanstack/react-query": "^5.83.0",
+		"@tanstack/react-router": "^1.127.3",
+		"@tanstack/react-router-with-query": "^1.127.3",
+		"@tanstack/react-start": "^1.127.6",
 		"@tanstack/react-table": "^8.21.3",
 		"class-variance-authority": "^0.7.1",
 		"clsx": "^2.1.1",
@@ -53,19 +55,16 @@
 		"sonner": "^2.0.6",
 		"tailwind-merge": "^3.3.1",
 		"vaul": "^1.1.2",
-		"vite": "^7.0.2",
-		"zod": "^3.25.74"
+		"vite": "^7.0.4",
+		"zod": "^3.25.76"
 	},
 	"devDependencies": {
 		"@biomejs/biome": "2.0.6",
-		"@eslint/eslintrc": "^3.3.1",
 		"@tailwindcss/postcss": "^4.1.11",
 		"@tailwindcss/vite": "^4.1.11",
-		"@types/node": "^20.19.4",
+		"@types/node": "^20.19.7",
 		"@types/react": "^19.1.8",
 		"@types/react-dom": "^19.1.6",
-		"eslint": "^9.30.1",
-		"eslint-config-next": "15.3.4",
 		"tailwindcss": "^4.1.11",
 		"tw-animate-css": "^1.3.5",
 		"typescript": "^5.8.3",
