--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
 		"@types/node": "^20.19.7",
 		"@types/react": "^19.1.8",
 		"@types/react-dom": "^19.1.6",
+		"@vitejs/plugin-react": "^4.6.0",
 		"tailwindcss": "^4.1.11",
 		"tw-animate-css": "^1.3.5",
 		"typescript": "^5.8.3",
